@@ -18,6 +18,10 @@ Graph/utils.pm
 Graph/Data.pm
 Graph/Error.pm
 Graph/FAQ.pod
+t/colour.t
+t/data.t
+t/error.t
+t/use.t
 20thcent.ttf
 20thcent_Read_Me.txt
 cetus.ttf
